Adjusting text spacing of dataset. Working on bug where table first row is skipped in all cases

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -144,6 +144,7 @@ body {
 .dataset-blurb {
     padding: 10px;
     width: 75%;
+    text-indent: 4px;
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
